--- a/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj.filters
+++ b/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj.filters
@@ -13,5 +13,13 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Day1">
+      <UniqueIdentifier>{8cc9cf44-0767-46b0-8cb2-5f7ca580e599}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CompoundType.cpp">
+      <Filter>Source Files\Day1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
