--- a/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj
+++ b/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CompoundType.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
