--- a/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj.filters
+++ b/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="CompoundType.cpp">
       <Filter>Source Files\Day1</Filter>
     </ClCompile>
+    <ClCompile Include="ConstDoc.cpp">
+      <Filter>Source Files\Day1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
