--- a/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj
+++ b/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CompoundType.cpp" />
+    <ClCompile Include="ConstDoc.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
