--- a/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj
+++ b/CPlusplusDoc/CPlusplusDoc/CPlusplusDoc.vcxproj
@@ -115,6 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BookManage.cpp" />
     <ClCompile Include="CompoundType.cpp" />
     <ClCompile Include="ConstDoc.cpp" />
   </ItemGroup>
